--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,12 @@ h4:before {
     top: 9px;
 }
 
+p {
+    color: white;
+}
+
+
+
 
 /* General
 ==================================================*/
